--- a/views/add-product.html
+++ b/views/add-product.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <form class="forms" action="/admin/add-product" method="post">
+        <form class="forms" action="/admin/product" method="post">
             <div class="forms-control">
                 Product name: <input type="text" name="title"><br>
                 Size: <input type="text" name="size"><br>
