--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,36 +1,23 @@
-.forms {
-    width: 20rem;
-    max-width: 90%;
-    margin: auto;
-}
-
-.forms-control {
+.form-control {
     margin: 1rem 0;
-}
-
-.forms-control label,
-.forms-control input {
+  }
+  
+  .form-control label,
+  .form-control input,
+  .form-control textarea {
     display: block;
     width: 100%;
-}
-
-.forms-control input {
-    border: 1px solid rgb(123, 255, 0);
+    margin-bottom: 0.25rem;
+  }
+  
+  .form-control input,
+  .form-control textarea {
+    border: 1px solid #a1a1a1;
     font: inherit;
     border-radius: 2px;
-}
-
-button {
-    font: inherit;
-    border: 1px solid #354fdf;
-    color: #5421a7;
-    background: rgb(255, 253, 253);
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-button:hover,
-button:active {
-    background-color: #532b92;
-    color: white;
-}
+  }
+  
+  .form-control input:focus,
+  .form-control textarea:focus {
+    outline-color: #00695c;
+  }
