--- a/views/contactus.html
+++ b/views/contactus.html
@@ -6,20 +6,29 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/form.css">
     <title>contact us</title>
+    <style>
+        .form-control input{
+            width: 30%;
+        }
+    </style>
 </head>
 <body>
     <header class="main-header">
-        <nav class="main-header_nav">
-            <ul class="main-header_item-list">
-                <li class="main-header_item"><a  href="/"> Shop</a> </li>
-                <li class="main-header_item"><a href="/admin/add-product">Add-Product</a></li>
-                <li class="main-header_item"><a class="active" href="/contactus">contact us</a></li>
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"><a  href="/"> Shop</a> </li>
+                <li class="main-header__item"><a  href="/products"> Products</a> </li>
+                <li class="main-header__item"><a  href="/cart"> Cart</a> </li>
+                <li class="main-header__item"><a  href="/orders"> Orders</a> </li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
+                <li class="main-header__item"><a href="/admin/products">Admin Products</a></li>
+                <li class="main-header__item"><a class="active" href="/contactus">contact us</a></li>
             </ul>
         </nav>
     </header>
     <main>
-       <form class="forms" action="/success" method="post"> 
-            <div class="forms-control">
+       <form class="product-form" action="/success" method="post"> 
+            <div class="form-control">
             Name:<br>
             <input type="text" name="name"><br>
             Email:<br>
