--- a/views/success.html
+++ b/views/success.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <header class="main-header">
-        <nav class="main-header_nav">
-            <ul class="main-header_item-list">
-                <li class="main-header_item"><a href="/"> Shop</a> </li>
-                <li class="main-header_item"><a href="/admin/add-product">Add-Product</a></li>
-                <li class="main-header_item"><a href="/contactus">contact us</a></li>
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"><a  href="/"> Shop</a> </li>
+                <li class="main-header__item"><a  href="/products"> Products</a> </li>
+                <li class="main-header__item"><a  href="/cart"> Cart</a> </li>
+                <li class="main-header__item"><a  href="/orders"> Orders</a> </li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
+                <li class="main-header__item"><a href="/admin/products">Admin Product</a></li>
+                <li class="main-header__item"><a class="active" href="/contactus">contact us</a></li>
             </ul>
         </nav>
     </header>
